@@ -265,6 +265,14 @@
 #                               in dotted-decimal format for IPv4 or in
 #                               hexadecimal format for IPv6.
 #
+#   Avahi (Bonjour) related options:
+#     -mimicmodel <model>
+#                               Specifies the icon model that appears on
+#                               clients. Defaults to off. Examples: RackMac
+#                               (same as Xserve), PowerBook, PowerMac, Macmini,
+#                               iMac, MacBook, MacBookPro, MacBookAir, MacPro,
+#                               AppleTV1,1, AirPort
+#
 
 
 #
