@@ -26,6 +26,7 @@
 
 #define AFP_DNS_SERVICE_TYPE "_afpovertcp._tcp"
 #define ADISK_SERVICE_TYPE "_adisk._tcp"
+#define DEV_INFO_SERVICE_TYPE "_device-info._tcp"
 
 #define MAXINSTANCENAMELEN 63
 
