@@ -96,6 +96,8 @@ struct afp_options {
     /* default value for winbind authentication */
     char *ntdomain, *ntseparator;
     char *logconfig;
+
+    char *mimicmodel;
 };
 
 #define AFPOBJ_TMPSIZ (MAXPATHLEN)
